--- a/onpay/templates/onpay/form.html
+++ b/onpay/templates/onpay/form.html
@@ -1,6 +1,7 @@
 <p>Пополнение счета работает автоматизированно через систему
 <a rel="nofollow" href="http://onpay.ru/">Onpay</a>.
-После ввода суммы вы появится окно с запросом ввода платежной системы и другими параметрами</p>
+После ввода суммы появится окно с запросом ввода платежной системы
+и другими параметрами</p>
 
 <form method="post" action="">
 <table>
